zmenu_manager_cluster/02_cluster-app/01_manager-be-deployment.yaml
# manager-be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-be
  labels:
    environment: staging   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-be
  template:
    metadata:
      labels:
        environment: staging 
        app: manager-be
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: manager-be
          image: ghcr.io/z-roberto-piva/zmenu_next_manager_backend:v0.0.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: backend-config
              mountPath: /secrets
              readOnly: true
      volumes:
        - name: backend-config
          secret:
            secretName: backend-config-secret
            items:
              - key: secret.json
                path: secret.json
