zmenu_manager_cluster/02_cluster-app/04_backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    environment: staging   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        environment: staging
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: backend
          image: ghcr.io/z-roberto-piva/zmenu_next_backoffice_backend:v0.0.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
