zmenu_manager_cluster/02_cluster-app/07_manager-fe-deployment.yaml
# manager-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager-fe
  labels:
    environment: staging 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager-fe
  template:
    metadata:
      labels: 
        environment: staging
        app: manager-fe
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: manager-fe
          image: ghcr.io/z-roberto-piva/zmenu_next_manager_frontend:v0.0.3
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx_manager.conf   # monta solo il file
            - name: tmp
              mountPath: /tmp
          # Se vuoi health checks:
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-conf
          configMap:
            name: manager-fe-nginx-conf
        - name: tmp
          emptyDir: {}
