zmenu_manager_cluster/02_cluster-app/10_ frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    environment: staging 
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels: 
        environment: staging
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: frontend
          image: ghcr.io/z-roberto-piva/zmenu_next_backoffice_frontend:0.0.3-2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx_fe.conf   # monta solo il file
            - name: tmp
              mountPath: /tmp
          # Se vuoi health checks:
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: nginx-conf
          configMap:
            name: fe-nginx-conf
        - name: tmp
          emptyDir: {}
