zmenu_manager_cluster/02_cluster-app/02_manager-be-service.yaml
# manager-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-be
  labels:
    environment: staging   
spec:
  selector: { app: manager-be }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
