zmenu_manager_cluster/02_cluster-app/05_backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    environment: staging 
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
