zmenu_manager_cluster/02_cluster-app/08_manager-fe-service.yaml
# manager-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-fe
  labels:
    environment: staging 
spec:
  selector: 
    app: manager-fe
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
