zmenu_manager_cluster/02_cluster-app/03_manager-be-route.yaml
# manager-be-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: manager-be
  labels:
    environment: staging   
spec:
  to:
    kind: Service
    name: manager-be
  port:
    targetPort: http
  tls:
    termination: edge
