zmenu_manager_cluster/02_cluster-app/06_backend-route.yaml
# backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
  labels:
    environment: staging   
spec:
  to: { kind: Service, name: backend }
  port: { targetPort: http }
  tls:
    termination: edge
