zmenu_manager_cluster/02_cluster-app/09_manager-fe-route.yaml
# manager-fe-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: manager-fe
  labels:
    environment: staging 
spec:
  to: { kind: Service, name: manager-fe }
  port: { targetPort: http }
  tls:
    termination: edge
