zmenu_manager_cluster/02_cluster-app/12_frontend-route.yaml
# frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    environment: staging 
spec:
  to: { kind: Service, name: frontend }
  port: { targetPort: http }
  tls:
    termination: edge
