zmenu_manager_cluster/02_cluster-app/13_frontend-route-ext.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-ext
  namespace: paas-zmenu-next
  labels:
    environment: staging
    type: external
spec:
  host: next-app.zhospitality.online
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGazCCBVOgAwIBAgIQCC1D7JKeIEcFADrwInTTPjANBgkqhkiG9w0BAQsFADBg
[...]
      SrQBGAIRlUxF96HSsA7v
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC39RfbDj7poO/v
[...]
      oUu3ki1R4oY3ltUPG1kNJhbn
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEjTCCA3WgAwIBAgIQDQd4KhM/xvmlcpbhMf/ReTANBgkqhkiG9w0BAQsFADBh
[...]
      7h4SeM6Y8l/7MBRpPCz6l8Y=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDjjCCAnagAwIBAgIQAzrx5qcRqaC7KGSxHQn65TANBgkqhkiG9w0BAQsFADBh
[...]
      MrY=
      -----END CERTIFICATE-----
  wildcardPolicy: None
